db.yaml
# db-tier.yaml: MongoDB Database (db-ns) 관련 리소스

# 1. 네임스페이스
apiVersion: v1
kind: Namespace
metadata:
  name: db-ns
  labels:
    istio-injection: enabled # Istio 활성화 필수
---
# 6. Services (DB) - Headless Service
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: db-ns
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: db
---
# 8. MongoDB StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: db-ns
spec:
  serviceName: "mongo-svc"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mongo:8
          ports:
            - containerPort: 27017
          command:
            - "mongod"
            - "--replSet"
            - "rs0"
            - "--bind_ip_all"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          hostPath:
            path: /mnt/data/mongodb-data
            type: DirectoryOrCreate
